tests/expected_invalid_permit_argument_without_as.diag.out
<input>:13:16: error: permit argument must be written as 'as name'
            submit(pass)
                   ^^^^
